[tool.poetry]
name = "django-impostor"
version = "0.1.0"
description = "Pretend to be someone else, if you are a superuser, in Django"
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
